nohup.out
Traceback (most recent call last):
  File "main.py", line 9, in <module>
    from Network import SDFNetwork, RenderingNetwork, SingleVarianceNetwork
  File "/data/home/yemingzhi/nerf/neus/Network.py", line 164
    sigma = self.-sdf(pts.to(device))
                 ^
SyntaxError: invalid syntax
Process rays data!
There are 488 batches of rays and each batch contains 2048 rays
==> Finished saving mesh.
Process rays data!
There are 488 batches of rays and each batch contains 2048 rays
Traceback (most recent call last):
  File "main.py", line 96, in <module>
    rgb, depth, _ = render_rays(sdf_network, color_network, deviation_network, rays_od, bound=bound,
ValueError: too many values to unpack (expected 3)
IMAGEIO FFMPEG_WRITER WARNING: input image is not divisible by macro_block_size=16, resizing from (200, 100) to (208, 112) to ensure video compatibility with most codecs and players. To prevent resizing, make your input image divisible by the macro_block_size or set the macro_block_size to 1 (risking incompatibility).
[swscaler @ 0x5bff600] Warning: data is not aligned! This can lead to a speed loss
Process rays data!
There are 488 batches of rays and each batch contains 2048 rays
